# nano-zyrkel-crowdgenome

./: .gitignore  README.md
.github/workflows/: collect-results.yml  deploy.yml  fetch-assembly.yml  llm-summary.yml  orchestrate.yml  update-wasm.yml
crates/plugin/: Cargo.toml
crates/plugin/src/: lib.rs
docs/: app.js  coi-serviceworker.js  index.html  pangenome-worker.js  reduce.js  style.css
docs/wasm/: nano_zyrkel_wasm_core.d.ts  nano_zyrkel_wasm_core.js  nano_zyrkel_wasm_core_bg.wasm  nano_zyrkel_wasm_core_bg.wasm.d.ts  package.json
hats/: config.json
scripts/: aggregate-results.py  cross-reference.py  server-chunk.py  split-assembly.py
staging/: collect.json  latest.json  llm-summary.json  summary.json
staging/chunks/: manifest.json
staging/crowdgenome/: active.json  history.jsonl  insight.json  latest.json  pipeline_state.json  state.json
staging/queue/: active.json
wasm-bridge/: Cargo.toml
wasm-bridge/src/: lib.rs
