[package]
name = "crowdgenome-wasm-bridge"
version = "0.1.0"
edition = "2021"
description = "WASM bridge: exposes nano-zyrkel-wasm-core to the CrowdGenome browser frontend"

[lib]
crate-type = ["cdylib"]

[dependencies]
nano-zyrkel-wasm-core = { git = "https://github.com/schlein-lab/nano-zyrkel", tag = "wasm-v0.2.0", default-features = false, features = ["data", "config"] }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
