[package]
name = "crowdgenome-plugin"
version = "0.1.0"
edition = "2021"
authors = ["Christian Schlein"]
description = "CrowdGenome orchestration plugin for nano-zyrkel: queue management, result aggregation, score pruning"

[dependencies]
nano-zyrkel-core = { path = "../../../nano-zyrkel-ref/crates/core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["fs"] }
tracing = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
